--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,11 @@
     <string name="ok">OK</string>
     <string name="country">Country</string>
     <string name="interests">Interests</string>
+    <string name="general">General</string>
+    <string name="business">Business</string>
     <string name="technology">Technology</string>
-    <string name="art">Art</string>
+    <string name="sports">Sports</string>
     <string name="science">Science</string>
-    <string name="fashion">Fashion</string>
-    <string name="engineering">Engineering</string>
-    <string name="politics">Politics</string>
+    <string name="health">Health</string>
+    <string name="entertainment">Entertainment</string>
 </resources>
